--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,14 @@
   background-size: 200% 200%;
   animation: gradient 3s ease infinite;
 }
+
+/* Remove number input spinner arrows */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
